@@ -1,3 +1,9 @@
+2007-07-09  Alex Graveley  <alex@beatniksoftware.com>
+
+	* compzilla/src/Debug.h: Switch to using PR_LOG.  The module name
+	is "compzilla".  Set NSPR_LOG_MODULES="compzilla:5" in your
+	environment to get debugging output.
+
 2007-07-08  Alex Graveley  <alex@beatniksoftware.com>
 
 	* compzilla/src/Debug.h: Pull out debug printing defines to here.
